move root directory

--- a/src/pages/en/index.mdx
+++ b/src/pages/en/index.mdx
@@ -14,7 +14,7 @@ lang: en
 
 1. [Vectors](/vectors)
 2. [Kinematics](/kinematics)
-3. [Geometry](/geometry)
+3. [Geometry](/en/geometry)
 
 Made by M.A. Álvaro.
 
