--- a/src/pages/es/index.mdx
+++ b/src/pages/es/index.mdx
@@ -14,7 +14,7 @@ lang: es
 
 1. [Vectores](/vectors_es)
 2. [Cinemática](/kinematics_es)
-3. [Geometría](/geometry_es)
+3. [Geometría](/es/geometry)
 
 Hecho por M.A. Álvaro.
 
