start vectors content migration to .mdx

--- a/src/pages/es/index.mdx
+++ b/src/pages/es/index.mdx
@@ -12,7 +12,7 @@ lang: es
 
 **[Read in English](/en/)**
 
-1. [Vectores](/vectors_es)
+1. [Vectores](/es/vectors)
 2. [Cinemática](/kinematics_es)
 3. [Geometría](/es/geometry)
 
