--- a/src/pages/es/vectors.mdx
+++ b/src/pages/es/vectors.mdx
@@ -27,7 +27,7 @@ Un **vector** es un segmento dirigido, uno de cuyos extremos (el punto A) se dic
 
 El origen del vector también se denomina punto inicial o punto de aplicación.
 
-![Un vector está representado por un segmento de línea dirigida desde su punto inicial A hasta su punto terminal B.](vector:svg1_1 "Figura 1.1: Un vector está representado por un segmento de línea dirigida desde su punto inicial A hasta su punto terminal B.")
+![Figura 2.1: Un vector está representado por un segmento de línea dirigida desde su punto inicial A hasta su punto terminal B.](vector:svg1_1 "Un vector está representado por un segmento de línea dirigida desde su punto inicial A hasta su punto terminal B.")
 
 Un vector geométrico, como se ha definido anteriormente, también se denomina **vector fijo** o **vector ligado**. Porque tiene un punto de partida único. En física se utiliza, por ejemplo, para especificar la acción de la fuerza sobre un cuerpo deformable o no rígido. En este caso, las fuerzas y deformaciones dentro del cuerpo dependen del punto de aplicación de la fuerza, así como de la magnitud y la línea de acción.
 
@@ -47,7 +47,7 @@ La suma de dos vectores $\vec a$ y $\vec b$, o suma de vectores, produce un terc
 
 Para encontrar $\overrightarrow{a+b}$, primero dibujamos el vector $\vec a$, y desde el final de $\vec a$, dibujamos $\vec b$. En otras palabras, hacemos que el origen de $\vec b$ coincida con el final $\vec a$. Esta posición corresponde a la noción de que nos movemos a lo largo del primer vector y luego, desde su punto terminal, nos movemos a lo largo del segundo vector. La suma vectorial tiene la propiedad conmutativa; Entonces, si primero dibujamos un vector $\vec b$, y desde el final de $\vec b$, dibujamos el vector $\vec a$, obtendremos $\overrightarrow{b+a}$, que es igual a $\overrightarrow{a+b}$.
 
-![Suma de vectores. Método Gráfico.](vector:svg1_2 "Figura 1.2: Suma de vectores. Método Gráfico.")
+![Figura 3.1: Suma de vectores. Método Gráfico.](vector:svg1_2 "Suma de vectores. Método Gráfico.")
 
 Un **escalar** es una cantidad que tiene magnitud pero no dirección. O, en otras palabras, una cantidad que se puede expresar con un número (real).
 
@@ -58,7 +58,7 @@ Un **sistema de coordenadas cartesianas en dos dimensiones** se define mediante 
 
 Para cualquier punto P, se dibuja una línea a través de P perpendicular a cada eje, y la posición en la que se encuentra con el eje se interpreta como un número. Los dos números, en ese orden elegido, son las coordenadas cartesianas (x, y) de P.
 
-![Plano cartesiano y coordenadas cartesianas de un punto.](vector:svg1_3 "Figura 1.3: Plano cartesiano y coordenadas cartesianas de un punto.")
+![Figura 4.1: Plano cartesiano y coordenadas cartesianas de un punto.](vector:svg1_3 "Plano cartesiano y coordenadas cartesianas de un punto.")
 
 Un **Sistema de coordenadas cartesianas en tres dimensiones** consta de tres ejes perpendiculares: el eje x, el eje y y el eje z que se cruzan en un punto común (el origen 0). Debido a que cada eje es una recta numérica que representa todos los números reales en $\mathbb{R}$, el sistema tridimensional a menudo se denota por $\mathbb{R}^3$.
 
@@ -66,17 +66,17 @@ El sistema de coordenadas cartesianas también se denomina **sistema de coordena
 
 En la Figura 1.4 (a), el eje z positivo se muestra sobre el plano que contiene los ejes x e y. El sistema que se muestra sigue la regla de la mano derecha. Si tomamos nuestra mano derecha y alineamos los dedos con el eje x positivo, luego dobla los dedos para que apunten en la dirección del eje y positivo, nuestro pulgar apunta en la dirección del eje z positivo. En este sitio web, siempre trabajamos con sistemas de coordenadas configurados de acuerdo con la regla de la mano derecha. Algunos sistemas siguen una regla de la mano izquierda, pero la regla de la mano derecha se considera la representación estándar.
 
-![Sistema de coordenadas rectangulares tridimensionales con el eje x, el eje y y el eje z.](/images/3DCoordSystAndRightHandRule.svg "Figura 1.4: (a) Sistema de coordenadas rectangulares tridimensionales con el eje x, el eje y y el eje z. (b) La regla de la mano derecha se utiliza para determinar la ubicación de los ejes de coordenadas en la norma Plano Cartesiano.")
+![Figura 4.2: (a) Sistema de coordenadas rectangulares tridimensionales con el eje x, el eje y y el eje z. (b) La regla de la mano derecha se utiliza para determinar la ubicación de los ejes de coordenadas en la norma Plano Cartesiano.](/images/3DCoordSystAndRightHandRule.svg "Sistema de coordenadas rectangulares tridimensionales con el eje x, el eje y y el eje z.")
 
 Describimos un punto P en el sistema de coordenadas rectangulares tridimensionales con las coordenadas $(x_1, y_1, z_1)$. Cada coordenada describe cómo se alinea el punto con el eje correspondiente.
 
-![Para trazar el punto P, con coordenadas (x1, y1, z1), desplazarse x1 unidades a lo largo del eje x, entonces ir y1 unidades en la dirección del eje Y, luego desplazarse z1 unidades en la dirección del eje z.](vector:svg1_5 "Figura 1.5: Para trazar el punto P, con coordenadas (x1, y1, z1), desplazarse x1 unidades a lo largo del eje x, entonces ir y1 unidades en la dirección del eje Y, luego desplazarse z1 unidades en la dirección del eje z.")
+![Figura 4.3: Para trazar el punto P, con coordenadas (x1, y1, z1), desplazarse x1 unidades a lo largo del eje x, entonces ir y1 unidades en la dirección del eje Y, luego desplazarse z1 unidades en la dirección del eje z.](vector:svg1_5 "Para trazar el punto P, con coordenadas (x1, y1, z1), desplazarse x1 unidades a lo largo del eje x, entonces ir y1 unidades en la dirección del eje Y, luego desplazarse z1 unidades en la dirección del eje z.")
 
 ## 5. Componentes de un Vector
 Cuando el punto inicial de un vector coincide con el origen del sistema de coordenadas, llamamos al vector **vector de posición estándar**. Debido a que se sabe que el punto inicial de cualquier vector en posición estándar es (0,0), podemos describir el vector tomando sólo las coordenadas de su punto terminal. Por lo tanto, si el vector $\vec v$ tiene su punto inicial en el origen y su punto terminal en (x, y), escribimos el vector mediante sus componentes como
 
 $$
-\vec v = (x, y) \tag{1}
+\vec v = (x, y) \tag{5.1}
 $$
 
 Cuando un vector se escribe de esta manera, los escalares x e y se denominan **componentes** de $\vec v$. Cuando necesitamos realizar cálculos con vectores, solemos describirlos como vectores de posición estándar porque es más fácil realizar tales cálculos.
@@ -87,28 +87,251 @@ Para hallar la magnitud de un vector a partir de sus componentes, utilizamos el 
 Dado un vector de posición $\vec v = (x, y)$, su **magnitud (o módulo)** se calcula mediante
 
 $$
-\|\vec v\| = \sqrt{x^2+y^2} \tag{2}
+\|\vec v\| = \sqrt{x^2+y^2} \tag{6.1}
 $$
 
 Y su **dirección** se calcula mediante
 
 $$
-\theta = \arctan (y/x) \tag{3}
+\theta = \arctan (y/x) \tag{6.2}
 $$
 
 Dadas la magnitud y dirección de un vector $\vec v$, su **componente x** se calcula mediante
 
 $$
-x = \|\vec v\|\cos\theta \tag{4}
+x = \|\vec v\|\cos\theta \tag{6.3}
 $$
 
 y su **componente y** se calcula mediante
 
 $$
-y = \|\vec v\|\sin\theta \tag{5}
+y = \|\vec v\|\sin\theta \tag{6.4}
 $$
 
 <details>
     <summary>Haz click aquí para abrir la calculadora de vectores</summary>
     <VectorConverter />
 </details>
+
+## 7. Suma de vectores y multiplicación por un escalar usando sus componentes
+La suma de dos vectores expresados mediante sus componentes, $\vec v = (x_1, y_1)$ y $\vec w = (x_2, y_2)$, se define como
+
+$$
+\vec v + \vec w = (x_1 + x_2, y_1 + y_2) \tag{7.1}
+$$
+
+El producto de un escalar $\lambda$ por un vector $\vec v$, expresado mediante sus componentes, $\vec v = (x, y)$, se define como
+
+$$
+\lambda\vec v = (\lambda x, \lambda y) \tag{7.2}
+$$
+
+## 8. El vector unitario
+El **vector unitario** $\vec u_v$ de un vector distinto de cero $\vec v$ es un vector que tiene la misma dirección que $\vec v$ pero una magnitud de 1. El vector unitario se calcula mediante
+
+$$
+\vec u_v = \vec v/\|\vec v\| \tag{8.1}
+$$
+
+Obsérvese que la magnitud $\|\vec v\|$ es un escalar, y dividir por un escalar es lo mismo que multiplicar por el recíproco del escalar $1/\|\vec v\|$.
+
+## 9. Representación de vectores mediante sus vectores unitarios $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$
+En un espacio bidimensional, un vector se puede representar mediante los vectores unitarios $\hat{\imath}$ y $\hat{\jmath}$. El vector unitario $\hat{\imath}$ es un vector de longitud 1 a lo largo del eje x, y el vector unitario $\hat{\jmath}$ es un vector de longitud 1 a lo largo del eje y.
+
+Si tenemos un vector dado por sus componentes $\vec v = (x, y)$, se puede representar como:
+
+$$
+\vec v =  x\hat{\imath} + y\hat{\jmath} \tag{9.1}
+$$
+
+En un espacio tridimensional, un vector se puede representar mediante vectores unitarios $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$. El vector unitario $\hat{\imath}$ es un vector de longitud 1 a lo largo del eje x, el vector unitario $\hat{\jmath}$ es un vector de longitud 1 a lo largo del eje y, y el vector unitario $\hat{k}$ es un vector de longitud 1 a lo largo del eje z.
+
+Si tenemos un vector expresado mediante sus componentes $\vec v = (x, y, z)$, se puede representar como:
+
+$$
+\vec v =  x\hat{\imath} + y\hat{\jmath} + z\hat{k} \tag{9.2}
+$$
+
+Esta suma vectorial se denomina **combinación lineal** de los vectores $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$.
+
+## 10. Producto escalar de dos vectores
+El **producto escalar** de dos vectores es un número (escalar) que se obtiene multiplicando los componentes correspondientes de los dos vectores y luego sumando dichos productos.
+
+Si $\vec v = (x_1, y_1, z_1)$ y $\vec w = (x_2, y_2, z_2)$ son dos vectores, entonces su producto escalar se calcula mediante:
+
+$$
+\vec v\cdot\vec w = x_1\cdot x_2 + y_1\cdot y_2 + z_1\cdot z_2 \tag{10.1}
+$$
+
+En términos de magnitud y dirección, el producto escalar también se puede definir como:
+
+$$
+\vec v\cdot\vec w = \|\vec v\|\cdot\|\vec w\|\cos\theta \tag{10.2}
+$$
+
+Donde $\theta$ es el ángulo subtendido desde $\vec v$ a $\vec w$.
+
+Usando [10.2], podemos expresar $\theta$ como:
+
+$$
+\theta = \arccos\frac{\vec v\cdot\vec w}{\|\vec v\|\cdot\|\vec w\|} \tag{10.3}
+$$
+
+Cuando el producto escalar de dos vectores es cero, se dice que ambos vectores son **ortogonales** o perpendiculares.
+
+## 11. Proyección de un vector
+La **proyección de $\vec w$** sobre $\vec v$ o sobre la línea que contiene a $\vec v$, se denota como $\text{proj}_v \vec w$, es un vector que se encuentra en $\vec v$ tiene la misma dirección que $\vec w$ (si el ángulo entre $\vec v$ y $\vec w$ es inferior a 90 grados) u opuesto a $\vec v$ (si el ángulo entre $\vec v$ y $\vec w$ es mayor de 90 grados).
+
+![Figura 11.1: Proyección de w sobre v.](vector:svg1_6 "Proyección de w sobre v.")
+
+Dado que la proyección de $\vec w$ sobre $\vec v$ está alineada con $\vec v$:
+
+$$
+\text{proj}_v \vec w = \|\text{proj}_v \vec w\|\cdot\vec u_v \tag{11.1}
+$$
+
+De la definición de [coseno](/es/geometry#31-definición-de-seno-coseno-y-tangente) se deduce que la magnitud de este vector de proyección se puede calcular como:
+
+$$
+\|\text{proj}_v \vec w\| = \|\vec w\|\cos\theta \tag{11.2}
+$$
+
+Donde $\theta$ es el ángulo entre $\vec v$ y $\vec w$.
+
+Ahora bien, si consideramos la expresión [10.2] del producto escalar de $\vec v$ y $\vec w$, la magnitud de $\text{proj}_v \vec w$ también puede expresarse como:
+
+$$
+\|\text{proj}_v \vec w\| = \frac{\vec w\cdot\vec v}{\|\vec v\|} = \vec w\cdot\vec u_v \tag{11.3}
+$$
+
+Entonces, usando las coordenadas de $\vec v$, $(x_1, y_1, z_1)$ y de $\vec w$, $(x_2, y_2, z_2)$ para calcular su producto escalar:
+
+$$
+\|\text{proj}_v \vec w\| = \frac{x_1\cdot x_2 + y_1\cdot y_2 + z_1\cdot z_2}{\sqrt{x_1^2+y_1^2+z_1^2}} \tag{11.4}
+$$
+
+## 12. Producto vectorial
+El **producto vectorial** de dos vectores es una operación binaria sobre dos vectores en un espacio tridimensional y se escribe como **$\vec v \times \vec w$**. El resultado de este producto vectorial es un tercer vector perpendicular (u ortogonal) a los vectores que se multiplican o dicho de otra forma, normal al plano que los contiene.
+
+La dirección del producto vectorial está determinada por la regla de la mano derecha. Si apuntas con el dedo índice en la dirección de $\vec v$, y el dedo medio en la dirección de $\vec w$, el pulgar apunta en la dirección de $(\vec v \times \vec w)$.
+
+Si $\vec v$ y $\vec w$ son dos vectores, y $\theta$ es el ángulo entre ellos, la magnitud de su producto vectorial viene dada por:
+
+$$
+\|\vec v \times \vec w\| = \|\vec v\|\cdot\|\vec w\|\sin\theta \tag{12.1}
+$$
+
+Entonces, la magnitud (o longitud) del producto vectorial se puede interpretar como el área del paralelogramo que abarcan los dos vectores que se multiplican.
+
+![Figura 12.1: Norma del producto vectorial como área del paralelogramo.](vector:svg1_7 "Norma del producto vectorial como área del paralelogramo.")
+
+Según sus componentes, si $\vec v = (x_1, y_1, z_1)$ y $\vec w = (x_2, y_2, z_2)$, el producto vectorial $\vec v \times \vec w$ es un vector definido como:
+
+$$
+\vec v \times \vec w = (y_1 \cdot z_2 - z_1 \cdot y_2, z_1 \cdot x_2 - x_1 \cdot z_2, x_1 \cdot y_2 - y_1 \cdot x_2) \tag{12.2}
+$$
+
+Cada componente de este vector resultante es el determinante de una matriz de 2x2 formada eliminando la fila y la columna del componente correspondiente de una matriz de 3x3 que contiene los vectores unitarios $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$ en la primera fila, los componentes de $\vec v$ en la segunda fila, y los componentes de $\vec w$ en la tercera fila.
+
+$$
+\begin{vmatrix}\vec i & \vec j & \vec k \\ x_1 & y_1 & z_1 \\ x_2 & y_2 & z_2\\ \end{vmatrix} = \begin{vmatrix} y_1 & z_1 \\ y_2 & z_2 \\ \end{vmatrix} \hat{\imath} - \begin{vmatrix} x_1 & z_1 \\ x_2 & z_2\\ \end{vmatrix} \hat{\jmath} + \begin{vmatrix} x_1 & y_1 \\ x_2 & y_2 \\ \end{vmatrix}\hat{k} \tag{12.3}
+$$
+
+Propiedades del producto vectorial:
+- Propiedad anticonmutativa: $\vec u \times \vec v = -\vec v \times \vec u$
+- Propiedad distributiva: $\vec u \times (\vec v + \vec w) = \vec u \times \vec v + \vec u \times \vec w$
+- Multiplicación por un escalar: $c\cdot(\vec u \times \vec v) = (c\cdot\vec u) \times \vec v = \vec u \times (c\cdot\vec v)$
+- Producto vectorial del vector cero: $\vec u \times \vec 0 = \vec 0 \times \vec u = \vec 0$
+- Producto vectorial de un vector por si mismo: $\vec v \times \vec v = \vec 0$
+
+## 13. Momento de un Vector Deslizante respecto a un Punto
+El **momento de un vector deslizante** $\vec v$ respecto a un punto P se calcula mediante el producto vectorial de $\vec r$ por $\vec v$. Siendo $\vec r$ el vector de posición de $\vec v$ respecto a P.
+
+$$
+\vec M = \vec r \times \vec v \tag{13.1}
+$$
+
+Donde el vector de posición, $\vec r$, se extiende desde el punto de interés P hasta el origen de $\vec v$.
+
+![Figura 13.1: Momento de un vector deslizante v respecto a un punto P.](vector:svg1_8 "Momento de un vector deslizante v respecto a un punto P.")
+
+Las propiedades del producto vectorial nos permiten concluir que $\vec M$ es un vector perpendicular al plano definido por $\vec r$ y $\vec v$ y que no cambia si movemos el vector deslizante $\vec v$ a lo largo de su línea de acción. Esto se debe a que el momento de un vector deslizante es una medida de su tendencia a causar rotación alrededor de un punto o eje, que está determinada tanto por la magnitud del vector como por su distancia desde el punto o eje.
+
+Al deslizar un vector a lo largo de su línea de acción, no cambia la magnitud del vector deslizante ni la distancia perpendicular desde su línea de acción hasta el punto o eje de interés. Por lo tanto, el momento sigue siendo el mismo. Esta propiedad es lo que lo convierte en un "vector deslizante".
+
+Este concepto es fundamental en física e ingeniería, ya que nos ayuda a comprender y calcular los efectos de las fuerzas en la rotación de los objetos.
+
+## 14. Momento de un Vector Deslizante respecto de una Línea
+El momento de un vector deslizante alrededor de una recta de interés l es la proyección sobre dicha recta del momento del vector con respecto a cualquier punto de la recta.
+
+![Figura 14.1: Momento de un vector deslizante v respecto de la línea l.](vector:svg1_9 "Momento de un vector deslizante v respecto de la línea l.")
+
+La magnitud del momento de un vector deslizante alrededor de una recta g, $\|\vec M_l\|$ se puede calcular utilizando el producto vectorial y escalar de tres vectores:
+1.  Vector unitario a lo largo de la línea de interés g, $\vec u_l = (u_{lx}, u_{ly}, u_{lz})$.
+2.  Vector de posición $\vec r = (r_x, r_y, r_z)$ desde cualquier punto de la línea de interés g hasta cualquier punto de la línea de acción del vector deslizante $\vec v$.
+3.  El vector deslizante $\vec v = (v_x, v_y, v_z)$.
+
+Esto es:
+
+$$
+\|\vec M_l\| = \vec u_l \cdot (\vec r \times \vec v) \tag{14.1}
+$$
+
+Para simplificar aún más los cálculos, matemáticamente podemos combinar el producto vectorial y escalar en lo que se conoce como un **producto mixto**. En el producto mixto escribimos el producto como un determinante con la forma:
+
+$$
+\|\vec M_l\| = \vec u_l \cdot (\vec r \times \vec v) = \begin{vmatrix}u_{lx} & u_{ly} & u_{lz} \\ r_x & r_y & r_z \\ v_x & v_y & v_z\\ \end{vmatrix} = u_{lx}\cdot\begin{vmatrix} r_y & r_z \\ v_y & v_z \\ \end{vmatrix} - u_{ly}\cdot\begin{vmatrix} r_x & r_z \\ v_x & v_z \\ \end{vmatrix} + u_{lz}\cdot\begin{vmatrix} r_x & r_y \\ v_x & v_y \\ \end{vmatrix} \tag{14.2}
+$$
+
+Finalmente, como un vector se puede expresar como el producto de su módulo por su vecotr unitario, tenemos que:
+
+$$
+\vec M_l = \|\vec M_l\| \cdot \vec u_l \tag{14.3}
+$$
+
+## 15. Funciones Vectoriales
+Una **función vectorial** es una función matemática de una o más variables cuyo rango es un conjunto de vectores.
+
+Por ejemplo, un tipo común de función vectorial es aquella que depende de un único parámetro real t y produce un vector $\vec f(t)$ como resultado. En términos de los vectores unitarios están $\hat{\imath}$, $\hat{\jmath}$, $\hat{k}$ del espacio cartesiano 3D, estos tipos específicos de funciones con valores vectoriales vienen dados por expresiones como:
+
+$$
+\vec f(t) = f_x(t)\hat{\imath} + f_y(t)\hat{\jmath} + f_z(t)\hat{k} \tag{15.1}
+$$
+
+Donde $f_x(t)$, $f_y(t)$, y $f_z(t)$ son las funciones de coordenadas del parámetro t, y el dominio de esta función vectorial es la intersección de los dominios de las funciones $f_x(t)$, $f_y(t)$, y $f_z(t)$.
+
+## 16. Derivada de una función vectorial
+La **derivada de una función vectorial** es casi idéntica a la definición de derivada de una función real de una variable. Sin embargo, debido a que el rango de una función con valores vectoriales consta de vectores, lo mismo ocurre con el rango de la derivada de una función con valores vectoriales. Es decir:
+
+$$
+\vec f'(t) = \frac{d\vec f}{dt} = \frac{df_x}{dt}\hat{\imath} + \frac{df_y}{dt}\hat{\jmath} +\frac{df_z}{dt}\hat{k} \tag{16.1}
+$$
+
+## 17. Derivada parcial de una función y su derivada total
+Si una función depende de más de una variable, su **derivada parcial** es la derivada con respecto a una de esas variables manteniendo las otras como constantes.
+
+La derivada parcial de una función $f(x,y,z)$ respecto a una de sus variables, x, se representa como:
+
+$$
+\frac{\partial f}{\partial x} \tag{17.1}
+$$
+
+La **derivada total** de una función $f(x,y,z)$ se puede calcular mediante la expresión:
+
+$$
+df = \frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy + \frac{\partial f}{\partial z}dz \tag{17.2}
+$$
+
+## 18. Integral de una función vectorial
+La **integral de una función vectorial** es otra función vectorial en la que sus funciones coordenadas son las integrales de la funciones coordenadas de la función vectorial inicial. Es decir, si $\vec f(t) = f_x(t)\vec i + f_y(t)\vec j + f_z(t)\vec k = (f_x(t), f_y(t), f_z(t))$, su integral es:
+
+$$
+\int \vec f(t) dt = \int (f_x(t), f_y(t), f_z(t)) dt = \left( \int f_x(t)dt, \int f_y(t)dt, \int f_z(t)dt \right) \tag{18.1}
+$$
+
+## Referencias
+- [8.8 Vectores. Precalculus. Openstax.](https://openstax.org/books/prec%C3%A1lculo-2ed/pages/8-8-vectores)
+- [Vector. Encyclopedia of Mathematics.](http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131)
+- [Vector algebra. Encyclopedia of Mathematics.](http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132)
+- [Cartesian orthogonal coordinate system. Encyclopedia of Mathematics.](https://encyclopediaofmath.org/wiki/Cartesian_orthogonal_coordinate_system)
+- [5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.](https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods)
